# Backgammon

./: CMakeLists.txt  ClassDiagram.vpp  Doxyfile  LICENSE  README.md  UseCase.vpp
.github/workflows/: build-cmake-linux-windows.yml
Backgammon/: Backgammon.sln
Backgammon/BackgammonLogicTests/: BackgammonLogicTests.vcxproj  BackgammonLogicTests.vcxproj.filters  test_board.cpp  test_game_end.cpp  test_game_legalTargets.cpp  test_game_moves_hit.cpp  test_game_start.cpp
BackgammonLib/: BackgammonLib.sln  BackgammonLib.vcxproj  BackgammonLib.vcxproj.filters  Board.cpp  Board.h  CMakeLists.txt  Color.h  Column.cpp  Column.h  Game.cpp  Game.h  IGame.h  MoveResult.h  Player.cpp  Player.h
BackgammonLib/Include/: Board.h  Board.hpp  Color.hpp  Column.h  Column.hpp  Game.h  Game.hpp  GameStateDTO.h  GameStateDTO.hpp  ICommand.hpp  IGame.hpp  IGameObserver.h  IGameObserver.hpp  MoveResult.h  MoveResult.hpp  Player.h  Player.hpp  RollOpeningDiceCommand.hpp
BackgammonLib/Source/: Board.cpp  Column.cpp  Game.cpp  Player.cpp
BackgammonLogicTests/: BackgammonLogicTests.vcxproj  BackgammonLogicTests.vcxproj.filters  CMakeLists.txt  test_column.cpp  test_game_bar.cpp  test_game_bearoff.cpp  test_game_moves.cpp  test_game_moves_hit.cpp  test_game_observer.cpp
BackgammonLogicTests/Source/: test_board.cpp  test_column.cpp  test_game_bar.cpp  test_game_bearoff.cpp  test_game_end.cpp  test_game_legalTargets.cpp  test_game_moves.cpp  test_game_moves_hit.cpp  test_game_observer.cpp  test_game_start.cpp
BackgammonTests/: CMakeLists.txt
BackgammonTests/Source/: test_game_start.cpp
BackgammonUI/: BackgammonUI.sln  CMakeLists.txt
BackgammonUI/BackgammonUI/: BackgammonUI.cpp  BackgammonUI.h  BackgammonUI.qrc  BackgammonUI.vcxproj  BackgammonUI.vcxproj.filters  BoardWidget.cpp  BoardWidget.h  main.cpp
BackgammonUI/Include/: BackgammonUI.hpp  BoardWidget.hpp
BackgammonUI/Source/: BackgammonUI.cpp  BoardWidget.cpp  main.cpp
BackgammonUI/UI/: BackgammonUI.qrc  BackgammonUI.ui
Diagrams/: Backgammon.vpp  BackgammonAD.vpp  BackgammonCD.vpp  BackgammonSD.vpp
